ingress/recipe-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: recipe-ingress
  namespace: gruppe12
  annotations:
    ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: www.gruppe12.recipe.com
      http:
        paths:
          - path: /frontend
            backend:
              serviceName: frontend-service
              servicePort: 80
          - path: /backend
            backend:
              serviceName: backend-service
              servicePort: 80
